--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,18 +1,17 @@
-sonar.projectKey=Ayaan49_py-aws-cicd
-sonar.organization=ayaan49
+sonar.projectKey=SudoSmitty_python-aws-cicd-pipeline
+sonar.organization=sudosmitty
 
-# Display name and version in SonarCloud UI
-sonar.projectName=py-aws-cicd
+# This is the name and version displayed in the SonarCloud UI.
+sonar.projectName=python-aws-cicd-pipeline
 sonar.projectVersion=1.0
 
-# Where your source code is (adjust if not in root)
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
 
 # Disable C/C++/Obj-C analysis (since this is Python)
 sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=-
 sonar.objc.file.suffixes=-
-
-# Encoding
-# sonar.sourceEncoding=UTF-8
-
