--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,6 @@ name: Build and Push Docker image to AWS ECR
 on:
   push:
     branches:
-      - development
       - main
 
     paths-ignore:
@@ -185,6 +184,45 @@ jobs:
               ECR_REPOSITORY='$ECR_REPOSITORY' \
               IMAGE_TAG='$IMAGE_TAG' \
           docker compose up -d --pull always --force-recreate"
+        
+        # Cleanup PEM key
+        rm -f ec2.pem
+
+  verify-deployment:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    
+    steps:
+    - name: Verify container is running
+      env:
+        EC2_PEM_KEY: ${{ secrets.EC2_PEM_KEY }}
+        EC2_HOST: ${{ secrets.EC2_HOST }}
+        EC2_USER: ${{ secrets.EC2_USER }}
+      run: |
+        # Save PEM key to file and set permissions
+        echo "$EC2_PEM_KEY" > ec2.pem
+        chmod 400 ec2.pem
+
+        # SSH command
+        SSH_COMMAND="ssh -i ec2.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST"
+
+        # Wait a few seconds for container to fully start
+        sleep 10
+
+        # Check if container is running
+        CONTAINER_STATUS=$($SSH_COMMAND "sudo docker ps --filter 'name=docker' --format '{{.Status}}'")
+        
+        if [ -z "$CONTAINER_STATUS" ]; then
+          echo "ERROR: Container is not running on EC2 instance"
+          rm -f ec2.pem
+          exit 1
+        fi
+        
+        echo "✓ Container is running: $CONTAINER_STATUS"
+        
+        # Optional: Check container health
+        CONTAINER_HEALTH=$($SSH_COMMAND "sudo docker inspect --format='{{.State.Health.Status}}' \$(sudo docker ps -q --filter 'name=docker') 2>/dev/null || echo 'no-health-check'")
+        echo "Container health status: $CONTAINER_HEALTH"
         
         # Cleanup PEM key
         rm -f ec2.pem
